--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.15",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "showdown": "^1.9.0"
   }
 }
